--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest run"
 	},
 	"dependencies": {
 		"axios": "^1.6.8",
@@ -17,6 +18,10 @@
 		"react-router-dom": "^6.22.3"
 	},
 	"devDependencies": {
+		"@testing-library/dom": "^9.3.4",
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^14.2.1",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/react": "^18.2.64",
 		"@types/react-dom": "^18.2.21",
 		"@vitejs/plugin-react": "^4.2.1",
@@ -25,8 +30,10 @@
 		"eslint-plugin-react": "^7.34.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
+		"jsdom": "^24.0.0",
 		"postcss": "^8.4.35",
 		"tailwindcss": "^3.4.1",
-		"vite": "^5.1.6"
+		"vite": "^5.1.6",
+		"vitest": "^1.4.0"
 	}
 }
